manifests/test/admin-web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: admin-web-app
  name: admin-web-app
  namespace: ambassador-test
spec:
  selector:
    app: admin-web-app
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
