manifests/test/store-web-app-http-proxy-admin.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: admin-web-app-admin
  namespace: ambassador-test
spec:
  virtualhost:
    fqdn: admin.ambassadors.ink
  routes:
    - conditions:
      - prefix: /
      services:
        - name: admin-web-app
          port: 80
